--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :birth_day %><br />
+    <%= f.label :birth_date %><br />
     <%= f.date_select :birth_day, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1) %>
   </div>
 
