--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -17,7 +17,7 @@
   &--right{
     &__content{
       background: #FFFFFF;
-      width: 700px;
+      width: 800px;
       margin-bottom: 50px;
     }
     &--top{
@@ -75,4 +75,10 @@
       text-align: center;
     }
   }
+}
+
+.info-index-btn{
+  height: 56px;
+  background:#eeeeee;
+  line-height: 56px;
 }
