--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -1,5 +1,5 @@
 .side-bar{
-  width:280px;
+  width:300px;
   margin:0 40px 0 0;
   box-sizing: border-box;
   &--top__menu{
@@ -24,11 +24,13 @@
       }
     }
   }
-  &--center__title,
-  &--lower__title{
+  &--center__title{
     margin:40px 0 0;
     font-size:16px;
-    font-weight: bold;
+  }
+  &--bottom__title{
+    margin:40px 0 0;
+    font-size:16px;
   }  
 }
 
