--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
+@import 'mixins';
 @import "reset";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'users';
 @import 'mypage';
 @import 'side-bar';
+@import 'logout';
