--- a/app/views/users/_logout.html.haml
+++ b/app/views/users/_logout.html.haml
@@ -6,6 +6,6 @@
   .form-logout
     .form-logout__middle
       %button.form-logout__middle__btn
-        = link_to "ログアウト", destroy_user_session_path, method: :delete 
+        = link_to "ログアウト"
 
 .footer
