--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,38 +1,47 @@
 %h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
+= form_for(@user, url: user_registration_path) do |f|
+  = render "devise/shared/error_messages", resource: @user
+
   .field
     = f.label :first_name
     %br/
     = f.text_field :first_name
+
   .field
     = f.label :last_name
     %br/
     = f.text_field :last_name
+
   .field
     = f.label :first_name_kana
     %br/
     = f.text_field :first_name_kana
+
   .field
     = f.label :last_name_kana
     %br/
     = f.text_field :last_name_kana
+
   .field
     = f.label :nickname
     %br/
     = f.text_field :nickname
+
   .field
     = f.label :email
     %br/
     = f.email_field :email, autofocus: true, autocomplete: "email"
+
   .field
     = f.label :birth_date
     %br/
     = f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1)
+
   .field
     = f.label :phone_number
     %br/
     = f.text_field :phone_number
+
   .field
     = f.label :password
     - if @minimum_password_length
@@ -40,10 +49,13 @@
         (#{@minimum_password_length} characters minimum)
     %br/
     = f.password_field :password, autocomplete: "new-password"
+
   .field
     = f.label :password_confirmation
     %br/
     = f.password_field :password_confirmation, autocomplete: "new-password"
+
   .actions
-    = f.submit "Sign up"
+    = f.submit "次へ"
+
 = render "devise/shared/links"
