--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,49 +1,61 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name
-  .field
-    = f.label :last_name
-    %br/
-    = f.text_field :last_name
-  .field
-    = f.label :first_name_kana
-    %br/
-    = f.text_field :first_name_kana
-  .field
-    = f.label :last_name_kana
-    %br/
-    = f.text_field :last_name_kana
-  .field
-    = f.label :nickname
-    %br/
-    = f.text_field :nickname
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :birth_date
-    %br/
-    = f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1)
-  .field
-    = f.label :phone_number
-    %br/
-    = f.text_field :phone_number
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.new-user-main
+  .new-user-main__box
+    .new-user-main__box__title
+      会員情報入力
+    .new-user-main__box__contents
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = render "devise/shared/error_messages", resource: resource
+        .field
+          = f.label :ニックネーム
+          %br/
+          = f.text_field :nickname
+          .field
+          = f.label :メールアドレス
+          %br/
+          = f.email_field :email, autofocus: true, autocomplete: "email"
+          .field
+          = f.label :パスワード
+          - if @minimum_password_length
+            %em
+              (#{@minimum_password_length} characters minimum)
+          %br/
+          = f.password_field :password, autocomplete: "new-password"
+          %br/
+          %h3 ※英字と数字の両方を含めて設定してください
+        .field
+          = f.label :パスワード（確認）
+          %br/
+          = f.password_field :password_confirmation, autocomplete: "new-password"
+        .form__text
+          %h3 本人確認
+          %br/
+          .new-user-main__box__contents__text
+            %h4 安心安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+            
+        .field
+          = f.label :名字
+          %br/
+          = f.text_field :first_name
+        .field
+          = f.label :名前
+          %br/
+          = f.text_field :last_name
+        .field
+          = f.label :名字（カナ）
+          %br/
+          = f.text_field :first_name_kana
+        .field
+          = f.label :名前（カナ）
+          %br/
+          = f.text_field :last_name_kana
+        .field
+          = f.label :生年月日
+          %br/
+          = f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1)
+        .field
+          = f.label :電話番号
+          %br/
+          = f.text_field :phone_number
+        .actions
+          = f.submit "Sign up"
+      = render "devise/shared/links"
