--- a/app/views/users/mypage.html.haml
+++ b/app/views/users/mypage.html.haml
@@ -1,7 +1,7 @@
 .header
 
 .mypage__header
-  メルカリ  >  
+  FURIMA  >  マイページ
 
 .mypage
   .mypage__whole
@@ -12,9 +12,9 @@
         .mypage--right__content
           .mypage--right--top
             .mypage__user-icon
-
+            
             .mypage__user-name
-
+              仮ユーザー
             .mypage__user-status
               評価
               %span 0
@@ -27,18 +27,18 @@
               .mypage__tab-box__tab--right
                 やることリスト
             .mypage__tab-box__info
+
               .info-box
                 .info-icon
 
                 .info-box__right
                   .info-message
-                    あああああ
+                    CM放映中！
                   .info-date
                     3時間前
             .mypage__tab-box__bottom
 
               .info-index-btn 一覧を見る
-          
           .mypage__purchased-product
             .mypage__purchased-product__title
               購入した商品
