--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -6,7 +6,7 @@
     &--vanner{
       width: 100%;
       height: 560px;
-      background-image: url(material/pict/bg-mainVisual-pict_pc.jpg);
+      background-image: image-url("material/pict/bg-mainVisual-pict_pc.jpg");
       background-position:top center;
       background-size: cover;
       background-repeat: no-repeat;
