--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -127,7 +127,7 @@
     }
 
     .middle--vanner{
-      background-image: url(material/pict/bg-topMiddleDl-pict.jpg);
+      background-image: image-url("material/pict/bg-topMiddleDl-pict.jpg");
       width: 100%;
       height: 400px;
       background-position: bottom;
@@ -297,7 +297,7 @@
 
   }
   .app--vanner {
-    background-image: url(material/pict/bg-appBanner-pict.jpg);
+    background-image: image-url(material/pict/bg-appBanner-pict.jpg);
     width: 100%;
     height: 359px;
     background-position: center;
