--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -297,7 +297,7 @@
 
   }
   .app--vanner {
-    background-image: image-url(material/pict/bg-appBanner-pict.jpg);
+    background-image: image-url("material/pict/bg-appBanner-pict.jpg");
     width: 100%;
     height: 359px;
     background-position: center;
