--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -1,8 +1,9 @@
 @mixin btn {
   width: 100%;
-  line-height: 50px;
-  font-size: 40px;
+  line-height: 40px;
+  font-size: 20px;
   text-align: center;
-  background: #3CCACE;
+  color: #fff;
   border: 1px solid #3CCACE;
+  background-color: #3CCACE;
 }
