--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -27,7 +27,7 @@
       height: 200px;
       position: relative;
       text-align: center;
-      background: url(asset_path("user_icon.png"));
+      background: url(asset_path("mypage_user_background.png"));
     }
   }
   &__user-icon{
@@ -38,6 +38,7 @@
     position: relative;
     font-size: 15px;
     font-weight: bold;
+    margin-top: 35px;
   }
   &__user-status{
   }
@@ -52,11 +53,14 @@
       font-weight: bold;
       &--left{
         width: 50%;
+        background: #FFFFFF;
         text-align: center;
         line-height: 70px;
+        border-top: solid red 2px;
       }
       &--right{
         width: 50%;
+        background: #EEEEEE;
         text-align: center;
         line-height: 70px;
       }
@@ -68,6 +72,7 @@
   }
   &__purchased-product{
     margin: 50px 0 0;
+    background: #ffffff;
     &__title{
       padding: 0 20px;
       box-sizing: border-box;
@@ -75,8 +80,10 @@
       font-weight: bold;
     }
     &_tab-box_content_text{
+      background-color: #FFFFFF;
       padding: 60px 0 60px;
       text-align: center;
+      color: #cccccc;
     }
   }
 }
@@ -105,6 +112,19 @@
       }
     }
   }
+}
+
+.furima_icon{
+  width: 50px;
+  height: 50px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.mypage_product{
+  width: 300px;
+  height: 300px;
 }
 
 .info-index-btn{
