--- a/app/assets/stylesheets/_card_registration.scss
+++ b/app/assets/stylesheets/_card_registration.scss
@@ -28,7 +28,7 @@
       }
       &--middle{
         width: 700px;
-        height: 25px;
+        height: 50px;
         padding: 50px;
         text-align: center;
         &--card{
@@ -41,13 +41,14 @@
           font-size: 14px;
           border-bottom: 1px solid #eee;
           text-align: center;
-          a {
-            text-decoration:none;
-            background-color: #3CCACE;
+        }
+        &__btn{
+          @include card-btn;
+          a{
             color: white;
           }
+          }
         }
-      }
       &--bottom{
         width: 700px;
         height: 20px;
