--- a/app/assets/stylesheets/_card_registration.scss
+++ b/app/assets/stylesheets/_card_registration.scss
@@ -11,8 +11,7 @@
     padding: 40px 0;
     display: flex;
     justify-content: space-between;
-    &__sidebar{
-    }
+    &__sidebar{}
     .form-card_registration{
       width: 700px;
       margin: 0 auto;
