--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -6,8 +6,8 @@ a {
 }
 
 .wipper {
-  width: 100％;
-  height: 100％;
+  width: 100%;
+  height: 100%;
   background-color: #eeeeee;
   text-align: center;
 
