--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,7 @@
  @import "font-awesome-sprockets";
  @import "font-awesome";
  @import "./items.scss";
+ @import 'mypage';
+ @import 'side-bar';
+ @import 'logout';
+ @import './card_registration';
