--- a/app/views/users/_side-bar.html.haml
+++ b/app/views/users/_side-bar.html.haml
@@ -30,7 +30,7 @@
   
   .side-bar--center
     .side-bar--center__title
-      メルペイ
+      フリマペイ
       .side-bar-box
         %li.side-bar--top__menu 売上・振込申請
       .side-bar-box
