--- a/app/views/users/mypage.html.haml
+++ b/app/views/users/mypage.html.haml
@@ -12,7 +12,7 @@
         .mypage--right__content
           .mypage--right--top
             .mypage__user-icon
-              =image_tag src="material/icon/user_icon.png", class: "user-icon"
+              =image_tag 'material/icon/user_icon.png', class: 'user-icon'
             .mypage__user-name
               仮ユーザー
             .mypage__user-status
@@ -29,7 +29,7 @@
             .mypage__tab-box__info
               .info-box
                 .info-icon
-                  = image_tag src="material/logo/mypage_logo.png", class: "furima_icon"
+                  = image_tag 'material/logo/mypage_logo.png', class: 'furima_icon'
                 .info-box__right
                   .info-message
                     CM放映中！
@@ -49,6 +49,6 @@
                   過去の取引
               .mypage__purchased-product__tab-box__content
                 .mypage__purchased-product__tab-box__content_text
-                  = image_tag src="material/pict/mypage_product.png", class: "mypage_product"
+                  = image_tag 'material/pict/mypage_product.png', class: 'mypage_product'
 
 .footer__mypage
