--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,61 +1,62 @@
-%h2 Sign up
-= form_for(@user, url: user_registration_path) do |f|
-  = render "devise/shared/error_messages", resource: @user
-
-  .field
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name
-
-  .field
-    = f.label :last_name
-    %br/
-    = f.text_field :last_name
-
-  .field
-    = f.label :first_name_kana
-    %br/
-    = f.text_field :first_name_kana
-
-  .field
-    = f.label :last_name_kana
-    %br/
-    = f.text_field :last_name_kana
-
-  .field
-    = f.label :nickname
-    %br/
-    = f.text_field :nickname
-
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-
-  .field
-    = f.label :birth_date
-    %br/
-    = f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1)
-
-  .field
-    = f.label :phone_number
-    %br/
-    = f.text_field :phone_number
-
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-
-  .actions
-    = f.submit "次へ"
-
-= render "devise/shared/links"
+.new-user-main
+  .new-user-main__box
+    .new-user-main__box__title
+      会員情報入力
+    .new-user-main__box__contents
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = render "devise/shared/error_messages", resource: resource
+        .new-user-main__box__contents__list
+          .form__new-user__group
+            = f.label :ニックネーム, class: "form__new-user__group-text"
+            %span.form__new-user__group--alert 必須
+            %br/
+            = f.text_field :nickname, placeholder: "例) メルカリ太郎", class: "def-input"
+          .form__new-user__group
+            .form__new-user__group-space
+              = f.label :メールアドレス, class: "form__new-user__group-text"
+              %span.form__new-user__group--alert 必須
+              %br/
+              = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "例) PC・携帯どちらでも可", class: "def-input"
+          .form__new-user__group
+            .form__new-user__group-space
+              = f.label :パスワード, class: "form__new-user__group-text"
+              %span.form__new-user__group--alert 必須
+              = f.password_field :password, autocomplete: "new-password", placeholder: "#{@minimum_password_length}文字以上の半角英数字", class: "def-input"
+            - if @minimum_password_length
+              %p.form-info-text 
+                ※英字と数字の両方を含めて設定してください
+            .form__new-user__group-checkbox
+              %input#reveal_password{type: "checkbox",  class: "checkbox-btn"}
+              = f.label :reveal_password, "パスワードを表示する", class: "checkbox-defult"
+              %br/
+          .form__new-user__group
+            .form__new-user__group-space
+              %h3.form__new-user__group__text 本人確認
+              %p.single-text
+                安心安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+          .form__new-user__group
+            .form__new-user__group-space
+              = f.label :"お名前(全角)", class: "form__new-user__group-text"
+              %span.form__new-user__group--alert 必須
+              %br/
+              = f.text_field :first_name, placeholder: "例）山田", class: "def-input-half"
+              = f.text_field :last_name, placeholder: "例）彩" , class: "def-input-half"
+          .form__new-user__group
+            .form__new-user__group-space
+              = f.label :"お名前(カナ)", class: "form__new-user__group-text"
+              %br/
+              = f.text_field :first_name_kana, placeholder: "例）ヤマダ", class: "def-input-half"
+              = f.text_field :last_name_kana, placeholder: "例）アヤ", class: "def-input-half"
+          .form__new-user__group
+            .form__new-user__group-space
+              = f.label :生年月日, class: "form__new-user__group-text"
+              %span.form__new-user__group--alert 必須
+              %br/
+              = f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1)
+              %p.form-info-text
+                ※本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
+          .form__new-user__form
+            %p
+            「次へ進む」のボタンを押すことにより、利用規約に同意したものとみなします
+          .actions
+            = f.submit "次へ進む", class: "nextpage-btn"
