--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  @import "font-awesome-sprockets";
  @import "font-awesome";
  @import "./items.scss";
- @import "devise/signup.scss"
+ @import "devise/signup.scss";
  @import 'mypage';
  @import 'side-bar';
  @import 'logout';
