--- a/app/views/shared/_sabfooter.html.haml
+++ b/app/views/shared/_sabfooter.html.haml
@@ -9,5 +9,5 @@
         =link_to "特定商取引に関する表記", "#"
   .signup-footer__logo
     =link_to image_tag "material/logo/logo-white.png", size: "180x40"
-  %p.inc
+  .inc
     ©︎Furima,Inc.
