--- a/app/views/signups/index.html.haml
+++ b/app/views/signups/index.html.haml
@@ -2,7 +2,7 @@
   .signup-header
     .signup-header__logo
       = link_to root_path do
-        = image_tag src="material/logo/logo.png", size: "180x40"
+        = image_tag "material/logo/logo.png", size: "180x40"
 
   .signup-main
     .signup-content
@@ -22,4 +22,3 @@
               Googleで登録する
 
   = render "shared/sabfooter"
-  
