--- a/app/assets/stylesheets/devise/_signup.scss
+++ b/app/assets/stylesheets/devise/_signup.scss
@@ -1,5 +1,9 @@
+.new-user-header {
+ 
+}
+
 .new-user-main {
-  background-color: #f5f5f5;
+  background-color: #eeecec;
   &__box {
     width: 700px;
     margin: 0 auto;
