--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -51,10 +51,9 @@
                   ※英字と数字の両方を含めて設定してください
             .form__new-user__group
               .form__new-user__group-space
-                = f.label :確認, class: "form__new-user__group-text"
+                = f.label :"パスワード(確認用)", class: "form__new-user__group-text"
                 %span.form__new-user__group--alert 必須
-                = f.password_field :password_confirmation, autocomplete: "new-password", "#{@minimum_password_length}文字以上の半角英数字", class: "def-input"
-              - if @minimum_password_length
+                = f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "#{@minimum_password_length}文字以上の半角英数字", class: "def-input"
               .form__new-user__group-checkbox
                 %input#reveal_password{type: "checkbox",  class: "checkbox-btn"}
                 = f.label :reveal_password, "パスワードを表示する", class: "checkbox-defult"
