--- a/app/views/products/_sabheader.html.haml
+++ b/app/views/products/_sabheader.html.haml
@@ -1,5 +1,24 @@
-.buy-exhibition_header
-  .buy-exhibition_header-body
-    .buy-exhibition_header-body-icon
-      =link_to root_path do
-        = image_tag "material/logo/logo.png", class: "icon_fmarket"
+.contents
+  .header
+    .fmarket
+      .fmarket__box
+        = link_to root_path do
+          = image_tag "material/logo/logo.png", class: "logo"
+    .clearfix
+      .progress-bar1
+        .progress-bar1__0
+          会員情報
+        .progress-bar1__x
+      .progress-bar2
+        電話番号認証
+        .progress-bar2__x
+      .progress-bar3
+        お届け先住所入力
+        .progress-bar3__x
+      .progress-bar4
+        支払い方法
+        .progress-bar4__x
+      .progress-bar5
+        .progress-bar5__0
+          完了
+        .progress-bar5__x
