--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -52,6 +52,7 @@
           .form__new-user__group
             .form__new-user__group-space
               = f.label :"お名前(カナ)", class: "form__new-user__group-text"
+              %span.form__new-user__group--alert 必須
               %br/
               = f.text_field :first_name_kana, placeholder: "例）ヤマダ", class: "def-input-half"
               = f.text_field :last_name_kana, placeholder: "例）アヤ", class: "def-input-half"
