--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -11,14 +11,14 @@
         - @item.images.each_with_index do |image, i|
           = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
     = f.fields_for :images do |image|
-      .js-file_group{data: {index: "image.index"}}
+      .js-file_group{ "data-index": "#{image.index}"}
         =image.file_field :src, class: 'js-file'
         %br/
         %span.js-remove 削除
       - if @item.persisted?
         = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
     - if @item.persisted?
-      .js-file_group{data: {index: "@item.images.count"}}
+      .js-file_group{ "data-index": "#{ @item.images.count}"}
         = file_field_tag :src, name: "item[images_attributes][#{@item.images.count}][src]", class: 'js-file'
         .js-remove 削除
   = f.submit
