--- a/app/views/signups/index.html.haml
+++ b/app/views/signups/index.html.haml
@@ -21,4 +21,4 @@
               =icon('fab', 'google', class: "signup-content__btn--google-icon")
               Googleで登録する
 
-  = render "products/sabfooter"
+  = render "signups/sabfooter"
