--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,4 +29,5 @@
  @import "signups.scss";
  @import "header";
  @import "footer";
- @import "listing_btn"
+ @import "listing_btn";
+ @import "devise/signup_address";
