--- a/app/views/signups/index.html.haml
+++ b/app/views/signups/index.html.haml
@@ -14,7 +14,7 @@
             = link_to new_user_registration_path, class: "default-btn signup-content__btn--email" do
               =icon('far', 'envelope', class: "signup-content__btn--email-icon")
               メールアドレスで登録する
-            = link_to "https://www.facebook.com/", class: "default-btn signup-content__btn--facebook" do
+            = link_to "#", class: "default-btn signup-content__btn--facebook" do
               =icon('fab', 'facebook-square', class: "signup-content__btn--facebook-icon")
               Facebookで登録する
             = link_to "#", class: "default-btn signup-content__btn--google" do
