--- a/app/views/users/_card_registration.html.haml
+++ b/app/views/users/_card_registration.html.haml
@@ -11,11 +11,7 @@
       .form-card_registration--top
         支払い方法
       .form-card_registration--middle
-        .form-card_registration--middle--card
-          クレジットカード一覧
-        .form-card_registration--middle--add
-          %button.form-card_registration--middle__btn
-            = link_to "クレジットカードを追加する", '/card/new'
+        = render "card/index"          
       .form-card_registration--bottom
         .form-card_registration--bottom--last
           支払い方法について
