--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,3 +1,9 @@
-%h1 新規出品
+.wipper
+  .signup-header
+    .signup-header__logo
+      = link_to root_path do
+        = image_tag "material/logo/logo.png", class: "signup-header__logo__size"
 
-= render partial: 'form'
+  = render partial: 'form'
+
+  = render 'signups/sabfooter'
