--- a/app/assets/stylesheets/item_form.scss
+++ b/app/assets/stylesheets/item_form.scss
@@ -7,7 +7,7 @@ a:hover{
 
 .item__content{
   background-color: #fff;
-  width: 700px;;
+  width: 700px;
   margin: 0 auto;
   font-family: "Source Sans Pro", Helvetica, Arial, "游ゴシック体", "YuGothic", "メイリオ", "Meiryo", sans-serif;
   #image-box{
