--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title FreemarketSample65c
     %script{ src: "https://js.pay.jp/", type: "text/javascript"}
+    %script{type:"text/javascript"}, Payjp.setPublicKey('pk_test_60016bef2aecfbb50ebb65e4')
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
