--- a/app/views/card/show.html.haml
+++ b/app/views/card/show.html.haml
@@ -1,14 +1,30 @@
-%label 登録クレジットカード情報
-%br
-= "**** **** **** " + @default_card_information.last4
-%br
-- exp_month = @default_card_information.exp_month.to_s
-- exp_year = @default_card_information.exp_year.to_s.slice(2,3)
-= exp_month + " / " + exp_year
-= form_tag(delete_card_index_path, method: :post, id: 'charge-form',  name: "inputForm") do
-  %input{ type: "hidden", name: "card_id", value: "" }
-  %button 削除する
+.header
 
-.back_to_mypage
-  %button.back_to_mypage__btn
-    = link_to "マイページへ戻る", '/users/mypage'
+.page__header
+  FURIMA  >  支払い方法
+
+.card_registration
+  .card_registration__whole
+    .card_registration__sidebar
+      = render "users/side-bar"
+    .form-card_registration
+      .form-card_registration--top
+        支払い方法
+      .form-card_registration--middle
+        .form-card_registration--middle--card
+          %label 登録クレジットカード情報
+          %br
+          = "**** **** **** " + @default_card_information.last4
+          %br
+          - exp_month = @default_card_information.exp_month.to_s
+          - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+          = exp_month + " / " + exp_year
+          = form_tag(delete_card_index_path, method: :post, id: 'charge-form',  name: "inputForm") do
+            %input{ type: "hidden", name: "card_id", value: "" }
+            %button 削除する
+
+      .form-card_registration--bottom
+        .form-card_registration--bottom--last
+          支払い方法について
+
+.footer
