--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -6,7 +6,7 @@
     車
   .item-main-content
     .item-photo
-
+      =image_tag'material/pict/sample-itemdetail.jpeg'
       .sold
     %table.item-detail
       %tbody
