--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,7 @@
  @import "header";
  @import "footer";
  @import "listing_btn";
+ @import "item_form";
+ @import "devise/signup_address";
+ @import "login";
+ @import "devise/signup_done";
