--- a/app/views/items/_listing_btn.html.haml
+++ b/app/views/items/_listing_btn.html.haml
@@ -1,4 +1,8 @@
 .listing-btn
-  = link_to new_item_path, class: 'listing-btn__link' do
-    .listing-btn__link__text 出品する
-    = icon('fas', 'far fa-camera fa-3x', class: 'listing-btn__link__icon')
+  - if user_signed_in?
+    = link_to new_item_path, class: 'listing-btn__link' do
+      .listing-btn__link__text 出品する
+      = icon('fas', 'far fa-camera fa-3x', class: 'listing-btn__link__icon')
+
+  - else
+    = link_to new_user_registration
