マイページのヘッダー、フッターの追加

--- a/app/views/items/_footer.html.haml
+++ b/app/views/items/_footer.html.haml
@@ -1,3 +1,14 @@
+.app--vanner
+  .content
+    %h2.content__subtitle
+      だれでもかんたん、人生を変えるフリマアプリ
+    %p.content__text
+      今すぐ無料ダウンロード
+    .content__btn
+      = link_to '#', class: 'content__btn__link' do
+        = image_tag src="material/logo/App_Store_Badge.png", class: "content__btn__app"
+      = link_to '#', class: 'content__btn__link' do
+        = image_tag src="material/logo/google_play.png", class: "content__btn__google"
 .footer
   .main
     .lists
