--- a/app/views/users/mypage.html.haml
+++ b/app/views/users/mypage.html.haml
@@ -1,7 +1,4 @@
-.header
-
-.page__header
-  FURIMA  >  マイページ
+= render 'items/header'
 
 .mypage
   .mypage__whole
@@ -51,4 +48,4 @@
                 .mypage__purchased-product__tab-box__content_text
                   = image_tag 'material/pict/mypage_product.png', class: 'mypage_product'
 
-.footer__mypage
+= render 'items/footer'
