--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -2,7 +2,8 @@
   .header__content
     .main
       .main__logo
-        = link_to image_tag("material/logo/logo.png", class: "main__logo__link"), '#'
+        = link_to root_path do
+          = image_tag("material/logo/logo.png", class: "main__logo__link")
       .main__search
         .search--text
           キーワードから検索
