--- a/app/assets/stylesheets/item_form.scss
+++ b/app/assets/stylesheets/item_form.scss
@@ -60,7 +60,7 @@ a:hover{
       }
       input[type="text"]{
         width: 100%;
-        height: 20px;
+        height: 48px;
         font-size: 14px;
         margin-top: 5px;
       }
@@ -81,14 +81,14 @@ a:hover{
         font-size: 12px;
         vertical-align: top;
       }
-      .description--input{
-        color: gray;
-        border: 1px solid lightgray;
+      .select--wrap__default{
         width: 100%;
-        height:60px;
-        padding: 5px 5px;
+        height: 100px;
+        font-size: 14px;
         margin-top: 5px;
-        margin-right: 1px;
+      }
+      ::placeholder{
+        padding: 5px 5px;
       }
     }
   }
@@ -116,13 +116,71 @@ a:hover{
         vertical-align: top;
       }
       .category--input{
-        color: gray;
-        border: 1px solid lightgray;
-        width: 200px;
-        height:20px;
-        padding: 5px 5px;
-        margin-top: 5px;
-        margin-right: 1px;
+        display: flex;
+        position: relative;
+        .select--wrap__default{
+          width: 100%;
+          height: 48px;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 10px;
+          -webkit-appearance: none;/* ベンダープレフィックス(Google Chrome、Safari用) */
+          -moz-appearance: none; /* ベンダープレフィックス(Firefox用) */
+          appearance: none; /* 標準のスタイルを無効にする */
+        }
+        ::-ms-expand { /* select要素のデザインを無効にする（IE用） */
+          display: none;
+          }
+        .fas.fa-angle-down{
+          top: 16px;
+          right: 20px;
+          font-size: 22px;
+          width: 9px;
+          position: absolute;
+          color: #888;
+        }
+      }
+    }
+    .item__size{
+      color: black;
+      font-size: 14px;
+      vertical-align: top;
+      text-align: left;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      .item__image--optional{
+        background-color: gray;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+        vertical-align: top;
+      }
+      .size--input{
+        display: flex;
+        position: relative;
+        .select--wrap__default{
+          width: 100%;
+          height: 48px;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 10px;
+          -webkit-appearance: none;
+          -moz-appearance: none; 
+          appearance: none; 
+        }
+        ::-ms-expand { 
+          display: none;
+          }
+        .fas.fa-angle-down{
+          top: 16px;
+          right: 20px;
+          font-size: 22px;
+          width: 9px;
+          position: absolute;
+          color: #888;
+        }
       }
     }
     .item__brand{
@@ -131,14 +189,23 @@ a:hover{
       vertical-align: top;
       text-align: left;
       margin-bottom: 20px;
-      .brand--input{
-        color: gray;
-        border: 1px solid lightgray;
-        width: 200px;
-        height:20px;
-        padding: 5px 5px;
+      .item__image--optional{
+        background-color: gray;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+        vertical-align: top;
+      }
+      input[type="text"]{
+        width: 100%;
+        height: 48px;
+        font-size: 14px;
         margin-top: 5px;
-        margin-right: 1px;
+      }
+      ::placeholder{
+        padding: 5px 5px;
       }
     }
     .item__status{
@@ -156,13 +223,29 @@ a:hover{
         vertical-align: top;
       }
       .status--input{
-        color: gray;
-        border: 1px solid lightgray;
-        width: 200px;
-        height:20px;
-        padding: 5px 5px;
-        margin-top: 5px;
-        margin-right: 1px;
+        display: flex;
+        position: relative;
+        .select--wrap__default{
+          width: 100%;
+          height: 48px;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 10px;
+          -webkit-appearance: none;
+          -moz-appearance: none; 
+          appearance: none; 
+        }
+        ::-ms-expand { 
+          display: none;
+          }
+        .fas.fa-angle-down{
+          top: 16px;
+          right: 20px;
+          font-size: 22px;
+          width: 9px;
+          position: absolute;
+          color: #888;
+        }
       }
     }
   }
@@ -191,13 +274,70 @@ a:hover{
         vertical-align: top;
       }
       .postage--input{
-        color: gray;
-        border: 1px solid lightgray;
-        width: 200px;
-        height:20px;
-        padding: 5px 5px;
-        margin-top: 5px;
-        margin-right: 1px;
+        display: flex;
+        position: relative;
+        .select--wrap__default{
+          width: 100%;
+          height: 48px;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 10px;
+          -webkit-appearance: none;
+          -moz-appearance: none; 
+          appearance: none; 
+        }
+        ::-ms-expand { 
+          display: none;
+          }
+        .fas.fa-angle-down{
+          top: 16px;
+          right: 20px;
+          font-size: 22px;
+          width: 9px;
+          position: absolute;
+          color: #888;
+        }
+      }
+    }
+    .item__delivery_way{
+      color: black;
+      font-size: 14px;
+      vertical-align: top;
+      text-align: left;
+      margin-bottom: 20px;
+      .item__image--alert{
+        background-color: #ea352d;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+        vertical-align: top;
+      }
+      .delivery_way--input{
+        display: flex;
+        position: relative;
+        .select--wrap__default{
+          width: 100%;
+          height: 48px;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 10px;
+          -webkit-appearance: none;
+          -moz-appearance: none; 
+          appearance: none; 
+        }
+        ::-ms-expand { 
+          display: none;
+          }
+        .fas.fa-angle-down{
+          top: 16px;
+          right: 20px;
+          font-size: 22px;
+          width: 9px;
+          position: absolute;
+          color: #888;
+        }
       }
     }
     .item__delivery_area{
@@ -216,13 +356,29 @@ a:hover{
         vertical-align: top;
       }
       .delivery_area--input{
-        color: gray;
-        border: 1px solid lightgray;
-        width: 200px;
-        height:20px;
-        padding: 5px 5px;
-        margin-top: 5px;
-        margin-right: 1px;
+        display: flex;
+        position: relative;
+        .select--wrap__default{
+          width: 100%;
+          height: 48px;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 10px;
+          -webkit-appearance: none;
+          -moz-appearance: none; 
+          appearance: none; 
+        }
+        ::-ms-expand { 
+          display: none;
+          }
+        .fas.fa-angle-down{
+          top: 16px;
+          right: 20px;
+          font-size: 22px;
+          width: 9px;
+          position: absolute;
+          color: #888;
+        }
       }
     }
     .item__delivery_date{
@@ -240,13 +396,29 @@ a:hover{
         vertical-align: top;
       }
       .delivery_data--input{
-        color: gray;
-        border: 1px solid lightgray;
-        width: 200px;
-        height:20px;
-        padding: 5px 5px;
-        margin-top: 5px;
-        margin-right: 1px;
+        display: flex;
+        position: relative;
+        .select--wrap__default{
+          width: 100%;
+          height: 48px;
+          font-size: 14px;
+          margin-top: 5px;
+          padding-left: 10px;
+          -webkit-appearance: none;
+          -moz-appearance: none; 
+          appearance: none; 
+        }
+        ::-ms-expand { 
+          display: none;
+          }
+        .fas.fa-angle-down{
+          top: 16px;
+          right: 20px;
+          font-size: 22px;
+          width: 9px;
+          position: absolute;
+          color: #888;
+        }
       }
     }
   }
@@ -265,8 +437,8 @@ a:hover{
       vertical-align: top;
     }
     input[type="number"]{
-      width: 200px;
-      height: 20px;
+      width: calc( 100% - 50px ) ;
+      height: 48px;
       font-size: 14px;
       margin-top: 5px;
     }
