--- a/app/views/card/show.html.haml
+++ b/app/views/card/show.html.haml
@@ -1,5 +1,5 @@
 .header
-
+  =render "items/header"
 .page__header
   FURIMA  >  支払い方法
 
@@ -28,3 +28,4 @@
           支払い方法について
 
 .footer
+  =render "items/footer"
