--- a/app/views/users/_card_registration.html.haml
+++ b/app/views/users/_card_registration.html.haml
@@ -1,5 +1,5 @@
 .header
-
+  =render "items/header"
 .page__header
   FURIMA  >  支払い方法
 
@@ -21,3 +21,4 @@
           支払い方法について
 
 .footer
+  =render "items/footer"
