[fix]mypage_支払い方法_header&footer

--- a/app/views/users/_card_registration.html.haml
+++ b/app/views/users/_card_registration.html.haml
@@ -1,7 +1,4 @@
-.header
-
-.page__header
-  FURIMA  >  支払い方法
+= render 'items/header'
 
 .card_registration
   .card_registration__whole
@@ -20,4 +17,4 @@
         .form-card_registration--bottom--last
           支払い方法について
 
-.footer
+= render 'items/footer'
